--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -7,4 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.use-new-id-generator-mappings=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 GOOGLE_API_KEY=<YOUR_GOOGLE_API_KEY>
+JWT_KEY=<YOUR_KEY>
 
