--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,16 @@
             <version>0.16</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.4.0</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+
+
+
     </dependencies>
 
     <properties>
