--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,6 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.4.0</version>
-            <!--<scope>test</scope>-->
         </dependency>
 
 
@@ -100,6 +99,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>address-manager-api</finalName>
     </build>
 
 
